Fix BFS for deque, add error for twice removing, add tests for ConcurrentModification